Modification des droit d'acces à la liste des categories et des locolités
